Aligns the magnifier in issue history details.
git-svn-id: svn+ssh://rubyforge.org/var/svn/redmine/trunk@9331 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -348,6 +348,8 @@ div#issue-changesets div.changeset { padding: 4px;}
 div#issue-changesets div.changeset { border-bottom: 1px solid #ddd; }
 div#issue-changesets p { margin-top: 0; margin-bottom: 1em;}
 
+.journal ul.details img {margin:0 0 -3px 4px; vertical-middle:base;}
+
 div#activity dl, #search-results { margin-left: 2em; }
 div#activity dd, #search-results dd { margin-bottom: 1em; padding-left: 18px; font-size: 0.9em; }
 div#activity dt, #search-results dt { margin-bottom: 0px; padding-left: 20px; line-height: 18px; background-position: 0 50%; background-repeat: no-repeat; }
